@@ -5,6 +5,6 @@ This package include javascripts and css resources from `arshaw fullcalendar <ht
 
 It does not provide any view or template. Is meant to be used as dependecy for building your own calendar views.
 
-Tested with Plone 3.3.5/4.0.
+Tested with Plone 3.3.5 / 4.x / 5.x.
 
 Now using fullcalendar v1.6.4
