@@ -1,0 +1,16 @@
+<?xml version="1.0"?>
+<registry>
+
+  <records prefix="plone.resources/fullcalendar"
+           interface="Products.CMFPlone.interfaces.IResourceRegistry"
+           remove="true" />
+
+  <records prefix="plone.resources/fullcalendar-gcal"
+           interface="Products.CMFPlone.interfaces.IResourceRegistry"
+           remove="true" />
+
+  <records prefix="plone.bundles/solgemafull"
+           interface="Products.CMFPlone.interfaces.IBundleRegistry"
+           remove="true" />
+
+</registry>
